# pet_project_django

./: pyproject.toml
config/: settings.py
tests/: test_pet_project_django.py
