[tool.poetry]
name = "Pet_Project_Django"
version = "0.1.0"
description = ""
authors = ["hydroxygenium <orenvady@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
